--- a/bangunDockerTFpy3/Dockerfile
+++ b/bangunDockerTFpy3/Dockerfile
@@ -13,9 +13,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install scikit-learn pyreadline Pillow
+RUN pip3 install scikit-learn Pillow
 RUN rm -rf /notebooks/*
-ADD *.sh /notebooks/
 WORKDIR /notebooks
-CMD ["/installOpenCV.sh"]
 CMD ["/run_jupyter.sh"]
