--- a/DeepLforServer(DockerXMiniconda)/Dockerfile
+++ b/DeepLforServer(DockerXMiniconda)/Dockerfile
@@ -14,8 +14,8 @@ ENV PATH=/miniconda/bin:${PATH}
 
 RUN conda update -y conda 
 RUN conda create -y -n py3 python=3
-ENV PATH=/miniconda/envs/py3:${PATH}
-RUN /bin/bash -c "source /miniconda/envs/py3/bin/activate"
+ENV PATH=/miniconda/envs/py3/bin:${PATH}
+RUN /bin/bash -c "source /miniconda/envs/py3/bin/activate py3"
 #RUN source activate py3
 
 ADD *.sh /installOpen/
