--- a/DeepLforServer(DockerXMiniconda)/Dockerfile
+++ b/DeepLforServer(DockerXMiniconda)/Dockerfile
@@ -10,18 +10,20 @@ RUN apt-get update && apt-get install -y curl
 RUN curl -LO http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh
 RUN bash Miniconda3-latest-Linux-x86_64.sh -p /miniconda -b
 RUN rm Miniconda3-latest-Linux-x86_64.sh
-ENV PATH=/miniconda/bin:${PATH}
+ENV PATH /miniconda/bin:$PATH
 
 RUN conda update -y conda 
 RUN conda create -y -n py3 python=3
-ENV PATH=/miniconda/envs/py3/bin:${PATH}
+ENV PATH /miniconda/envs/py3/bin:$PATH
+#ENV PATH=/miniconda/envs/py3/bin:${PATH}
 RUN /bin/bash -c "source /miniconda/envs/py3/bin/activate py3"
 #RUN source activate py3
 
 ADD *.sh /installOpen/
 ADD *.py /installOpen/
 WORKDIR /installOpen
-RUN bash installDependency.sh 
+RUN /bin/bash -c "installDependency.sh"
+#RUN bash installDependency.sh 
 RUN rm -rf /notebooks/*
 ADD *.ipynb /notebooks/
 WORKDIR /notebooks
