--- a/DeepLforServer(CPU)(devel)/Dockerfile
+++ b/DeepLforServer(CPU)(devel)/Dockerfile
@@ -63,7 +63,7 @@ RUN apt-get update && apt-get install -y \
 		python3-dev \
 		python3-tk \
 		python3-numpy \
-        python3-pip
+        python3-pip \
 		ant \
 		default-jdk \
 		doxygen \
