--- a/DeepLforServer(CPU)(devel)/Dockerfile
+++ b/DeepLforServer(CPU)(devel)/Dockerfile
@@ -5,6 +5,11 @@ MAINTAINER Moch. Ainun Najib <m.ec2.a.najib@gmail.com>
 ARG TENSORFLOW_VERSION=1.2.0
 ARG TENSORFLOW_ARCH=cpu
 
+ENV CPUCOUNT 1
+RUN CPUCOUNT=$(cat /proc/cpuinfo | grep '^processor.*:' | wc -l)
+ENV OPENCV_VERSION 3.1.0
+
+
 # Install dependencies
 RUN apt-get update && apt-get install -y \
 		bc \
@@ -125,11 +130,36 @@ RUN pip3 --no-cache-dir install \
 #	make install && \
 #	ldconfig && \
 #	echo 'ln /dev/null /dev/raw1394' >> ~/.bashrc
+RUN cd /opt/ && \
+	git clone https://github.com/Itseez/opencv.git && \
+	git clone https://github.com/Itseez/opencv_contrib.git && \
+	cd opencv && \
+	git checkout ${OPENCV_VERSION} && \
+	cd ../opencv_contrib && \
+	git checkout ${OPENCV_VERSION}
+
+RUN mkdir -p /opt/opencv/build && \
+	cd /opt/opencv/build && \
+	cmake -D CMAKE_BUILD_TYPE=RELEASE \
+		-D CMAKE_INSTALL_PREFIX=/usr/local \
+		# -D INSTALL_C_EXAMPLES=ON \
+		# -D INSTALL_PYTHON_EXAMPLES=ON \
+		-D OPENCV_EXTRA_MODULES_PATH=/opt/opencv_contrib/modules \
+		# -D BUILD_EXAMPLES=ON \
+		.. && \
+	make -j${CPUCOUNT} && \
+	make install && \
+	ldconfig
+# now clean up the unwanted source to keep image size to a minimum
+RUN cd /opt && \
+	rm -rf /opt/opencv && \
+	rm -rf /opt/opencv_contrib && \
+	apt-get purge -y cmake && \
+	apt-get autoremove -y --purge
 
 # Set up notebook config
 COPY jupyter_notebook_config.py /root/.jupyter/
 
-# Jupyter has issues with being run directly: https://github.com/ipython/ipython/issues/7062
 COPY jalankan.sh /root/
 
 EXPOSE 6006 8888
