--- a/DeepLforServer(CPU)(devel)/Dockerfile
+++ b/DeepLforServer(CPU)(devel)/Dockerfile
@@ -144,7 +144,7 @@ RUN mkdir -p /opt/opencv/build && \
 		-D CMAKE_INSTALL_PREFIX=/usr/local \
 		# -D INSTALL_C_EXAMPLES=ON \
 		# -D INSTALL_PYTHON_EXAMPLES=ON \
-		-D OPENCV_EXTRA_MODULES_PATH=/opt/opencv_contrib/modules \
+		-D OPENCV_EXTRA_MODULES_PATH= ../../opencv_contrib/modules \
 		# -D BUILD_EXAMPLES=ON \
 		.. && \
 	make -j${CPUCOUNT} && \
